add criteria api Specifications